[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Interface/Menu-interface/Main-menu-background.jpg" type="Texture" id=1]
[ext_resource path="res://Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Cenas/Menus/Main_menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Fonts/Roboto-Regular.ttf"

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = SubResource( 2 )

[node name="Main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Top_container" type="Control" parent="."]
anchor_right = 1.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Top_container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.5
margin_top = -38.0
margin_right = 102.5
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "Zigmor"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom_container" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -500.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btns_container" type="VBoxContainer" parent="Bottom_container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -175.0
margin_right = 150.0
margin_bottom = 175.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn_play" type="Button" parent="Bottom_container/Btns_container"]
margin_top = 30.0
margin_right = 300.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 3 )
text = "Jogar"

[node name="Btn_options" type="Button" parent="Bottom_container/Btns_container"]
margin_top = 115.0
margin_right = 300.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 3 )
text = "Opções"

[node name="Btn_credits" type="Button" parent="Bottom_container/Btns_container"]
margin_top = 200.0
margin_right = 300.0
margin_bottom = 235.0
custom_fonts/font = SubResource( 3 )
text = "Créditos"

[node name="Btn_exit" type="Button" parent="Bottom_container/Btns_container"]
margin_top = 285.0
margin_right = 300.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 3 )
text = "Sair"

[connection signal="pressed" from="Bottom_container/Btns_container/Btn_play" to="." method="_on_Btn_play_pressed"]
[connection signal="pressed" from="Bottom_container/Btns_container/Btn_options" to="." method="_on_Btn_options_pressed"]
[connection signal="pressed" from="Bottom_container/Btns_container/Btn_credits" to="." method="_on_Btn_credits_pressed"]
[connection signal="pressed" from="Bottom_container/Btns_container/Btn_exit" to="." method="_on_Btn_exit_pressed"]
